--- a/src/assets/sass/base/_breakpoints.scss
+++ b/src/assets/sass/base/_breakpoints.scss
@@ -7,23 +7,45 @@
     @media (max-width: 575px) {
       @content;
     }
-  } @else if $size == phone-up {
+  }
+
+  @else if $size == phone-up {
+    @media (min-width: 375px) {
+      @content;
+    }
+  }
+
+  @else if $size == phone-big-up {
     @media (min-width: 576px) {
       @content;
     }
-  } @else if $size == tablet-up {
+  }
+
+  @else if $size == tablet-down {
+    @media (max-width: 767px) {
+      @content;
+    }
+  }
+
+  @else if $size == tablet-up {
     @media (min-width: 768px) {
       @content;
     }
-  } @else if $size == tablet-big-up {
+  }
+
+  @else if $size == tablet-big-up {
     @media (min-width: 1024px) {
       @content;
     }
-  } @else if $size == desktop-up {
+  }
+
+  @else if $size == desktop-up {
     @media (min-width: 1200px) {
       @content;
     }
-  } @else if $size == desktop-big-up {
+  }
+
+  @else if $size == desktop-big-up {
     @media (min-width: 1800px) {
       @content;
     }
