--- a/src/assets/sass/base/_colors.scss
+++ b/src/assets/sass/base/_colors.scss
@@ -3,8 +3,8 @@
 */
 
 // Base
-$white: #ffffff;
-$black: #000000;
+$white: #fff;
+$black: #000;
 $transparent: transparent;
 
 // --- Modelo para nomear as cores ---
@@ -14,11 +14,11 @@ $transparent: transparent;
 // começando de 100 e subindo de 100 em 100 conforme a cor vai ficando mais escura.
 // dessa maneira é simples saber que, por exemplo, $blue-500 é mais claro que $blue-600 e assim por diante.
 // - HEX: hexadecimal da cor.
-// 
+//
 // Exemplo:
 
 // Gray
 $gray-500: #2c3e50;
 
 // Green
-$green-500: #42b983; 
+$green-500: #42b983;
