--- a/src/assets/sass/base/_variables.scss
+++ b/src/assets/sass/base/_variables.scss
@@ -23,7 +23,7 @@ $border-2: 0.12rem;
 
 // -- Family
 // Ex.: font-family: $font-sans;
-$font-sans: 'Lato', Arial, sans-serif; // Change to font-face for sans-serif
+$font-sans: 'Lato', arial, sans-serif; // Change to font-face for sans-serif
 
 // -- Weight
 // Ex.: font-weight: $font-thin;
@@ -37,8 +37,8 @@ $font-black: 900;
 
 // -- Size
 // Ex.: font-size: $text-sm;
-$text-xs: .75rem;     // 12px
-$text-sm:	.875rem;    // 14px
+$text-xs: 0.75rem;     // 12px
+$text-sm:	0.875rem;    // 14px
 $text-base:	1rem;     // 16px
 $text-lg:	1.125rem;   // 18px
 $text-xl:	1.25rem;    // 20px
